--- a/buy-files/czechia.html
+++ b/buy-files/czechia.html
@@ -110,9 +110,24 @@
 
         <div class="estate-karlovy-vary wrap">
             <h2>Karlovy Vary Properties</h2>
+            <div class="property-kalovy">
+                <div class="estate-photo">
+                    <img src="../photos/walter-sturn--_folCc8Q8k-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        .property-prague, .property-brno, .property-liberex
 
         <div class="flex-three-info-boxes wrap">
             <div id="book-a-tour-info-box">
