--- a/buy-files/czechia.html
+++ b/buy-files/czechia.html
@@ -69,7 +69,7 @@
                     <img src="../photos/webaliser-_TPTXZd9mOo-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
-                    div class="estate-info-text">
+                    <div class="estate-info-text">
                         <h1>221 Baker Street</h1>
                         <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
                     </div>
