--- a/buy-files/czechia.html
+++ b/buy-files/czechia.html
@@ -136,9 +136,24 @@
                     </div>
                 </div>
             </div>
+            <div class="property-brno-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/4590129-01.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        .property-prague-house, .property-brno-house
 
         <div class="estate-liberec wrap">
             <h2>Liberex Properties</h2>
@@ -162,6 +177,23 @@
             <div class="property-liberex-house">
                 <div class="estate-photo">
                     <img src="../photos/35_W3245_Snake_Rd_2039_Print__1_.0.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-liberex-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/alan-j-hendry-zVf-R-r3szw-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
@@ -200,6 +232,23 @@
             <div class="property-kalovy-house">
                 <div class="estate-photo">
                     <img src="../photos/49de0729a4762b157f577aca962c0d31-full.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
+                <div class="estate-info">
+                    <div class="estate-info-text">
+                        <h1>221 Baker Street</h1>
+                        <p>Royal Archtecture, 10 Bedrooms, 12 Bathrooms, 2 Towers, Kitchen, Living Room, Dinning Room, 2 Office Rooms, Basement, Attic</p>
+                    </div>
+                    <div class="estate-price">
+                        <p><b>$29.999.000</b></p>
+                    </div>
+                    <div id="estate-button">
+                        <a href="../html-files/book-tour-of-house.html">Book A Tour</a>
+                    </div>
+                </div>
+            </div>
+            <div class="property-kalovy-house-one">
+                <div class="estate-photo">
+                    <img src="../photos/alejandra-cifre-gonzalez-ylyn5r4vxcA-unsplash.jpg" alt="picture of the exterior of a house we have for sell">
                 </div>
                 <div class="estate-info">
                     <div class="estate-info-text">
