--- a/buy-files/czechia.html
+++ b/buy-files/czechia.html
@@ -101,6 +101,7 @@
             <div class="property-prague-house-two">
                 <div class="estate-photo">
                     <img src="../photos/article-2385290-1B2ACA5B000005DC-736_964x630.jpg" alt="picture of the exterior of a house we have for sell">
+                </div>
                     <div class="estate-info">
                         <div class="estate-info-text">
                             <h1>221 Baker Street</h1>
