--- a/html-files/login.html
+++ b/html-files/login.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="../css-files/header-footer.css"
-    />
-    <meta charset="UTF-8" />
-    <meta
-      name="Login Page Real Estate Agency"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <meta name="author" content="AKB" />
-    <title>Login Page Real Estate Agency</title>
-  </head>
+    <head>
+        <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
+        <link type="text/css" rel="stylesheet" href="../css-files/login.css">
+        <meta charset="UTF-8">
+        <meta name="Login / Create An Account Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="AKB">
+        <title>Login / Create An Account Page Real Estate Agency</title>
+    </head>
 
   <body>
     <!--Header-->
