--- a/html-files/login.html
+++ b/html-files/login.html
@@ -34,7 +34,19 @@
     <!--Content-->
     <main class="page-body">
 
-        
+        <div id="login-container">
+            <h1>Login Into Your Account</h1>
+            <div class="login-form">
+                <label for="username">E-mail: </label>
+                <input type="text" id="username" name="username" required>
+                <label for="password">Password:</label>
+                <input type="text" id="password" name="password" required>
+                <div id="login-form-button">
+                    <a href="./account.html">Submitt</a>
+                </div>
+            </div>
+        </div>
+
       <div class="container">
         <h1>Login</h1>
         <form action="/login" method="post">
