--- a/html-files/login.html
+++ b/html-files/login.html
@@ -44,6 +44,12 @@
                 <div id="login-form-button">
                     <a href="./account.html">Submitt</a>
                 </div>
+                <div id="login-form-text">
+                    <p>Dont Have Any Account Yet?</p>
+                    <div id="login-form-create-account-button">
+                        <a href="./register.html">Then Create An Account</a>
+                    </div>
+                </div>
             </div>
         </div>
 
