--- a/html-files/login.html
+++ b/html-files/login.html
@@ -34,6 +34,7 @@
     <!--Content-->
     <main class="page-body">
 
+        <!--Login / Create Account Box-->
         <div id="login-container">
             <h1>Login Into Your Account</h1>
             <div class="login-form">
@@ -50,6 +51,15 @@
                         <a href="./register.html">Then Create An Account</a>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="benefits wrap">
+            <div id="benefits-text">
+                <h1>Why Have An Account On Real Estate Agency Website?</h1>
+                <p>There Are Many Reasons To Have An Account On Our Website</p>
+                <p>One Of The Reason Is That You Can Stay Up To Date With Our Properties, Whether It Is When New Properties Which Came On The Website, Price Drops, Or Simply Being Up To Date With News From Our Company.</p>
+                <p>If You Are An Investor In Our Company, Having An Account On Our Website Gives You More Benefits Like Helping Us Making Decisions, As Being A Part Of The Converstation Where We Should Expand Next</p>
             </div>
         </div>
 
