--- a/html-files/login.html
+++ b/html-files/login.html
@@ -60,6 +60,8 @@
                 <p>There Are Many Reasons To Have An Account On Our Website</p>
                 <p>One Of The Reason Is That You Can Stay Up To Date With Our Properties, Whether It Is When New Properties Which Came On The Website, Price Drops, Or Simply Being Up To Date With News From Our Company.</p>
                 <p>If You Are An Investor In Our Company, Having An Account On Our Website Gives You More Benefits Like Helping Us Making Decisions, As Being A Part Of The Converstation Where We Should Expand Next</p>
+                <p>Having An Account Also Gives You The Upper Hand When It Comes To Contacting Us</p>
+                <p>And Much More</p>
             </div>
         </div>
 
