--- a/html-files/login.html
+++ b/html-files/login.html
@@ -54,8 +54,8 @@
             </div>
         </div>
 
-        <div class="benefits wrap">
-            <div id="benefits-text">
+        <div class="hero-image-login">
+            <div class="hero-text-login">
                 <h1>Why Have An Account On Real Estate Agency Website?</h1>
                 <p>There Are Many Reasons To Have An Account On Our Website</p>
                 <p>One Of The Reason Is That You Can Stay Up To Date With Our Properties, Whether It Is When New Properties Which Came On The Website, Price Drops, Or Simply Being Up To Date With News From Our Company.</p>
