--- a/html-files/login.html
+++ b/html-files/login.html
@@ -3,6 +3,7 @@
     <head>
         <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
         <link type="text/css" rel="stylesheet" href="../css-files/login.css">
+        <link type="text/css" rel="stylesheet" href="../css-files/contact-content.css">
         <meta charset="UTF-8">
         <meta name="Login / Create An Account Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="AKB">
@@ -62,6 +63,21 @@
                         <a href="./register.html">Then Create An Account</a>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="flex-contact row">
+            <div id="phone">
+                <p><b>Our Phone Number</b></p>
+                <p>+1 (330) 530-7972</p>
+            </div>
+            <div id="location">
+                <p><b>Our Headqurters</b><p>
+                <p>224 Park Drive, Gotham City</p>
+            </div>
+            <div id="email">
+                <p><b>Our E-mail Address</b></p>
+                <p>SqaureEyes@gmail.com</p>
             </div>
         </div>
 
