--- a/html-files/login.html
+++ b/html-files/login.html
@@ -5,9 +5,9 @@
         <link type="text/css" rel="stylesheet" href="../css-files/login-account-register.css">
         <link type="text/css" rel="stylesheet" href="../css-files/contact-content.css">
         <meta charset="UTF-8">
-        <meta name="Login / Create An Account Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
+        <meta name="Login Into Account Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="AKB">
-        <title>Login / Create An Account Page Real Estate Agency</title>
+        <title>Login Into Account Page Real Estate Agency</title>
     </head>
 
   <body>
