--- a/html-files/register.html
+++ b/html-files/register.html
@@ -33,6 +33,17 @@
     
         <!--Content-->
         <main class="page-body">
+            <div class="hero-image-login">
+                <div class="hero-text-login">
+                    <h1>Why Have An Account On Real Estate Agency Website?</h1>
+                    <p>We Have Always Your Best Interest In Mind, THats Why We Are Giving You The Opportunity To Create An Account</p>
+                    <p>There Are Many Reasons To Have An Account On Our Website</p>
+                    <p>One Of The Reason Is That You Can Stay Up To Date With Our Properties, Whether It Is When New Properties Which Came On The Website, Price Drops, Or Simply Being Up To Date With News From Our Company.</p>
+                    <p>If You Are An Investor In Our Company, Having An Account On Our Website Gives You More Benefits Like Helping Us Making Decisions, As Being A Part Of The Converstation Where We Should Expand Next</p>
+                    <p>Having An Account Also Gives You The Upper Hand When It Comes To Contacting Us</p>
+                    <p>And Much More</p>
+                </div>
+            </div>
         </main>
 
         <!--Footer-->
