--- a/html-files/register.html
+++ b/html-files/register.html
@@ -44,6 +44,27 @@
                     <p>And Much More</p>
                 </div>
             </div>
+
+            <div id="create-account-form">
+                <label for="first-name">First Name:</label>
+                <input type="text" id="first-name" name="first-name" required>
+                <br>
+                <br>
+                <label for="last-name">Last Name:</label>
+                <input type="text" id="last-name" name="last-name" required>
+                <br>
+                <br>
+                <label for="e-mail">E-mail:</label>
+                <input type="text" id="e-mail" name="e-mail" required>
+                <br>
+                <br>
+                <label for="password">Passord:</label>
+                <input form="text" id="password" name="password" required>
+                <br>
+                <br>
+                <label for="repeat-password">Repeat Password</label>
+                <input form="text" id="repeat-password" name="repeat-password" required>
+            </div>
         </main>
 
         <!--Footer-->
