--- a/html-files/register.html
+++ b/html-files/register.html
@@ -64,6 +64,9 @@
                 <br>
                 <label for="repeat-password">Repeat Password</label>
                 <input form="text" id="repeat-password" name="repeat-password" required>
+                <div id="create-account-form-button">
+                    <a href="successful-register.html">Submit</a>
+                </div>
             </div>
         </main>
 
