--- a/html-files/register.html
+++ b/html-files/register.html
@@ -68,6 +68,12 @@
                     <a href="successful-register.html">Submit</a>
                 </div>
             </div>
+
+            <div id="problems-with-creating-account">
+                <h1>Having Problems With Creating An Account</h1>
+                <p><b>If So Contact Our Customer Support And They Will Help You Out, They Are Geniuses</b></p>
+                <a href="./contact.html">Click Here</a>
+            </div>
         </main>
 
         <!--Footer-->
