--- a/html-files/successful-register.html
+++ b/html-files/successful-register.html
@@ -33,6 +33,18 @@
 
       <!--Content-->
       <main class="page-body">
+
+        <div class="hero-image-succesful">
+            <div class="hero-text-succesful">
+                <h1>You Form Was Succesful</h1>
+                <h2>Within Few Mintues You Should Get An Email From Us Verifying Your Accoint</h2>
+                <p>Didn't Recive An Email? Contact Our Customer Support</p>
+                <div id="problems-again-account-button">
+                    <a href="./contact.html">Click Here</a>
+                </div>
+            </div>
+        </div>
+
       </main>
 
       <!--Footer-->
